<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:defaultValue="English"
        android:entries="@array/lang_list"
        android:entryValues="@array/lang_list"

        android:key="process_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/choose_process_lang" />

    <ListPreference
        android:defaultValue="English"
        android:entries="@array/lang_list"
        android:entryValues="@array/lang_list"
        android:key="src_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/source_language" />

    <ListPreference
        android:defaultValue="Hebrew"
        android:entries="@array/lang_list"
        android:entryValues="@array/lang_list"
        android:key="dest_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/destination_language" />

    <ListPreference
        android:defaultValue="14"
        android:entries="@array/size_list"
        android:entryValues="@array/size_list"
        android:key="font_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/fontSize_list" />

</PreferenceScreen>
