<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/process_language"
            android:background="@color/green"
            android:textStyle="bold"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/spLanguage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:prompt="@string/choose_process_lang"
            android:background="@color/green"
            />
        </LinearLayout>
            <ImageView
                android:id="@+id/picIV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                />
            <LinearLayout
                android:id="@+id/btn_process_image"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:onClick="onClickGoOutput">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_left_corner"
                    android:src="@drawable/ic_process_image"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/process_image"
                    android:background="@drawable/btn_right_corner"
                    android:textSize="24sp"
                    android:textColor="@color/whiteColor"
                    android:textStyle="bold"
                    android:gravity="center"/>
        </LinearLayout>
    <!--
    <Button
        android:id="@+id/loadImageBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Process Image"
        android:onClick="onClickGoOutput"
        />
        -->

</LinearLayout>